samples/_failures_safe/1761075530_1b844c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_982d901a.c: In function ‘print_buffer’:
./samples/SAFE/__tmp_982d901a.c:124:39: error: missing terminating " character
  124 |         if ((i + 1) % 16 == 0) printf("\
      |                                       ^~
./samples/SAFE/__tmp_982d901a.c:124:9: error: expected expression at end of input
  124 |         if ((i + 1) % 16 == 0) printf("\
      |         ^~
./samples/SAFE/__tmp_982d901a.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_982d901a.c:124:9: error: expected declaration or statement at end of input
